try again element edited

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <div class="text-input">
                 <p class="timer">1:00</p>
                 <input  type="text" name="text-input" id="text-input" >
-                <a href="#" class="restart-input"><img id="rotate-img" src="./resources/repeat.svg" aria-hidden="true"></a>
+                <a href="#" class="restart-input">
+                    <p>Try again</p>
+                    <img id="rotate-img" src="./resources/repeat.svg" aria-hidden="true">
+                </a>
             </div>
 
             <div class="keyboard">
